Refactoring (PO&PB patterns, Allure integration and etc)